# project_context_hook

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
project_context_hook/: app.py  composer.py  ddev.py  io.py  notifier.py  paths.py  project.py  renderer.py  repository.py  templates.py
prompts/: BASE.md
tests/: test_app.py  test_composer.py  test_project.py  test_renderer.py  test_templates.py
